updated header and footer so that they are fixed during scrolling and the options are always visible

--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -345,10 +345,27 @@ li.urgent-announcement {
   font-size: 10px;
   color: #9e9e9e;
 }
-
 .footer-position {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  z-index: 2;
+}
+.whitespace-footer {
+    position: relative;
+    height: 100px;
+
+}
+.whitespace-header {
+    position: relative;
+    height: 50px;
+
+}
+.header-position {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 2;
 }
